--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="flex items-center justify-between">
                 <div class="flex items-center">
                     <a href="#home">
-                        <img src="https://www.dropbox.com/scl/fi/t90j450pdb6j1ucnnzqfn/sharfi_grey.png?rlkey=vj5bbx3udet64tjaku0yqylq1&st=z0o6tsr1&raw=1" alt="UAE Business Solutions Logo" class="h-10">
+                        <img src="Images/sharfi_grey.png" alt="UAE Business Solutions Logo" class="h-10">
                     </a>
                 </div>
                 <div class="hidden md:flex space-x-8">
@@ -46,7 +46,7 @@
                     </a>
                 </div>
                 <div class="md:w-1/2 mt-10 md:mt-0" data-aos="fade-left">
-                    <img src="https://www.dropbox.com/scl/fi/kii4gwjsthdodn9k5phpv/sharfi__Create_a_vibrant_cloud_computing-themed_image_featuri_0b061990-a07c-48ca-bf58-2471ac2ec729_1.png?rlkey=8a5vpblneb69t2wvlp2kkt0xy&st=sltimfnz&raw=1" alt="Business" class="rounded-lg shadow-2xl">
+                    <img src="Images/sharfi__software_development_--ar_65_--v_6.1_84fbd688-0bbc-40e1-8555-4b7c7a4fbe4e_3.png" alt="Business" class="rounded-lg shadow-2xl">
                 </div>
             </div>
         </div>
@@ -245,14 +245,19 @@
     <script>
         AOS.init({
             duration: 800,
-            once: false,
-            offset: 50,
-            delay: 50,
-            disable: 'mobile',
+            once: true,
+            offset: 100,
+            delay: 0,
+            disable: false,
             startEvent: 'DOMContentLoaded',
             mirror: false,
             anchorPlacement: 'top-bottom',
-            easing: 'ease-out-cubic'
+            easing: 'ease-out-cubic',
+            mobile: {
+                disable: false,
+                once: true,
+                duration: 600
+            }
         });
 
         window.addEventListener('resize', function() {
@@ -266,6 +271,10 @@
         });
 
         window.addEventListener('load', function() {
+            AOS.refresh();
+        });
+
+        document.addEventListener('touchend', function() {
             AOS.refresh();
         });
     </script>
