--- a/index.html
+++ b/index.html
@@ -247,6 +247,48 @@
         </div>
     </footer>
 
+    <!-- Floating Call Button -->
+    <div class="fixed bottom-8 right-8 z-50 flex flex-col items-end">
+        <!-- Main Button -->
+        <button onclick="toggleCallForm()" class="bg-blue-600 hover:bg-blue-700 text-white rounded-full p-4 shadow-lg flex items-center gap-2 group transition-all duration-300">
+            <span class="hidden group-hover:inline-block transition-all duration-300">Get A Call</span>
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
+            </svg>
+        </button>
+
+        <!-- Popup Form -->
+        <div id="callForm" class="hidden bg-white rounded-lg shadow-xl p-6 mt-4 w-80">
+            <div class="flex justify-between items-center mb-4">
+                <h3 class="text-lg font-semibold text-gray-800">Request a Call Back</h3>
+                <button onclick="toggleCallForm()" class="text-gray-500 hover:text-gray-700">
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
+                    </svg>
+                </button>
+            </div>
+            <form class="space-y-4">
+                <div>
+                    <input type="text" placeholder="Your Name" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600">
+                </div>
+                <div>
+                    <input type="tel" placeholder="Phone Number" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600">
+                </div>
+                <div>
+                    <select class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600">
+                        <option value="">Preferred Time</option>
+                        <option value="morning">Morning (9AM - 12PM)</option>
+                        <option value="afternoon">Afternoon (12PM - 4PM)</option>
+                        <option value="evening">Evening (4PM - 7PM)</option>
+                    </select>
+                </div>
+                <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded-lg hover:bg-blue-700 transition">
+                    Submit Request
+                </button>
+            </form>
+        </div>
+    </div>
+
     <script>
         AOS.init({
             duration: 800,
@@ -282,6 +324,11 @@
         document.addEventListener('touchend', function() {
             AOS.refresh();
         });
+
+        function toggleCallForm() {
+            const form = document.getElementById('callForm');
+            form.classList.toggle('hidden');
+        }
     </script>
 </body>
 </html> 
