--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="flex items-center justify-between">
                 <div class="flex items-center">
                     <a href="#home">
-                        <img src="https://www.dropbox.com/scl/fi/t90j450pdb6j1ucnnzqfn/sharfi_grey.png?rlkey=vj5bbx3udet64tjaku0yqylq1&st=pjso2xlp&raw=1" alt="UAE Business Solutions Logo" class="h-10">
+                        <img src="https://ik.imagekit.io/sharfi/sharfi_grey.png?updatedAt=1739120343098" alt="UAE Business Solutions Logo" class="h-10">
                     </a>
                 </div>
                 <div class="hidden md:flex space-x-8">
@@ -51,7 +51,7 @@
                     </a>
                 </div>
                 <div class="md:w-1/2 mt-10 md:mt-0" data-aos="fade-left">
-                    <img src="https://www.dropbox.com/scl/fi/kii4gwjsthdodn9k5phpv/sharfi__Create_a_vibrant_cloud_computing-themed_image_featuri_0b061990-a07c-48ca-bf58-2471ac2ec729_1.png?rlkey=8a5vpblneb69t2wvlp2kkt0xy&st=s7qf0xyk&raw=1" alt="Business" class="rounded-lg shadow-2xl">
+                    <img src="https://ik.imagekit.io/sharfi/buscon.jpeg?updatedAt=1739121401158" alt="Business" class="rounded-lg shadow-2xl">
                 </div>
             </div>
         </div>
@@ -172,14 +172,14 @@
         <div class="container mx-auto px-6">
             <div class="max-w-4xl mx-auto bg-white rounded-2xl shadow-xl p-8" data-aos="fade-up">
                 <h2 class="text-4xl font-bold text-center text-gray-800 mb-8">Get In Touch</h2>
-                <form class="space-y-6">
+                <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST" class="space-y-6">
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                        <input type="text" placeholder="Name" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600">
-                        <input type="email" placeholder="Email" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600">
+                        <input type="text" name="name" placeholder="Name" required class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600">
+                        <input type="email" name="email" placeholder="Email" required class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600">
                     </div>
-                    <input type="text" placeholder="Subject" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600">
-                    <textarea placeholder="Message" rows="5" class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600"></textarea>
-                    <button class="w-full bg-blue-600 text-white px-8 py-3 rounded-lg hover:bg-blue-700 transition">
+                    <input type="text" name="subject" placeholder="Subject" required class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600">
+                    <textarea name="message" placeholder="Message" rows="5" required class="w-full px-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600"></textarea>
+                    <button type="submit" class="w-full bg-blue-600 text-white px-8 py-3 rounded-lg hover:bg-blue-700 transition">
                         Send Message
                     </button>
                 </form>
@@ -267,15 +267,15 @@
                     </svg>
                 </button>
             </div>
-            <form class="space-y-4">
+            <form action="https://formspree.io/f/YOUR_SECOND_FORM_ID" method="POST" class="space-y-4">
                 <div>
-                    <input type="text" placeholder="Your Name" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600">
+                    <input type="text" name="name" placeholder="Your Name" required class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600">
                 </div>
                 <div>
-                    <input type="tel" placeholder="Phone Number" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600">
+                    <input type="tel" name="phone" placeholder="Phone Number" required class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600">
                 </div>
                 <div>
-                    <select class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600">
+                    <select name="preferred_time" required class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600">
                         <option value="">Preferred Time</option>
                         <option value="morning">Morning (9AM - 12PM)</option>
                         <option value="afternoon">Afternoon (12PM - 4PM)</option>
